# rust-rocket-sample

./: Cargo.toml  LICENSE  README.md  test.http
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/middleware/: Cargo.toml
crates/middleware/src/: lib.rs
src/: main.rs
