[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
utoipa = { version = "4.1.0", features = ["rocket_extras"] }
utoipa-rapidoc = { version = "2.0.0", features = ["rocket"] }
middleware = { path = "../middleware" }
